--- a/Launchpad-LED-Editor/Launchpad-LED-Editor.csproj
+++ b/Launchpad-LED-Editor/Launchpad-LED-Editor.csproj
@@ -46,22 +46,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DeviceManager.cs" />
-    <Compile Include="Launchpad.cs" />
-    <Compile Include="MainForm.cs">
+    <Compile Include="GUI\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainForm.Designer.cs">
+    <Compile Include="GUI\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="LaunchpadData.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestingForm.cs">
+    <Compile Include="GUI\TestingForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="TestingForm.Designer.cs">
+    <Compile Include="GUI\TestingForm.Designer.cs">
       <DependentUpon>TestingForm.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="MainForm.resx">
+    <EmbeddedResource Include="GUI\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -73,7 +73,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="TestingForm.resx">
+    <EmbeddedResource Include="GUI\TestingForm.resx">
       <DependentUpon>TestingForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
