Added mask texture for LEDs
Cooler Look.

--- a/Launchpad-LED-Editor/Launchpad-LED-Editor.csproj
+++ b/Launchpad-LED-Editor/Launchpad-LED-Editor.csproj
@@ -134,6 +134,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="credits.png" />
+    <None Include="LedMask.png" />
     <None Include="icon32x32.ico" />
   </ItemGroup>
   <ItemGroup>
